<resources>
    <string name="app_name">CatMe</string>
    <string name="login">Login</string>
    <string name="senha">Password</string>
    <string name="entrar">Sign In</string>
    <string name="cadastro">Sign Up!</string>
    <string name="perfil">My Profile</string>
    <string name="adotar">Adopt Cats</string>
    <string name="disponibilizar">Make Available For Adoption</string>
    <string name="sair">Sign Out</string>
    <string name="nome_completo">Name</string>
    <string name="telefone">Phone Number</string>
    <string name="email">E-mail/Login</string>
    <string name="salvar">Save</string>
    <string name="title_activity_cadastro">Cadastro Activity</string>
    <string name="title_activity_perfil">Perfil Activity</string>
    <string name="editar">Edit</string>
    <string name="cadastro_realizado">Data Saved Successfully!</string>
    <string name="campos">All Information Is Required!</string>
    <string name="foto_gato">Take A Photo Of Your Cat</string>
    <string name="descricao">Cat\'s Description</string>
    <string name="erro_login">Username And Password Are Incorrect!</string>
    <string name="login_senha_vazio">Enter Username And Password!</string>
    <string name="foto_usuario">Click on the image to take photo</string>
    <string name="dados_alterados">Data Changed Successfully!</string>
    <string name="selecione_foto">Choose a Photo!</string>
    <string name="foto_usuario_2">Long click to choose from gallery</string>
    <string name="ligar">Call</string>
    <string name="foto_do_gato">Cat\'s Photo</string>
    <string name="salvar_gato">Save Cat\'s Information</string>
    <string name="salvar_usuario">Save User\'s Information</string>
    <string name="ligar_dono">Call Cat\'s Owner</string>
    <string name="perfil_usuario">User\'s Profile</string>
    <string name="editar_usuario">Edit User\'s Information</string>
    <string name="foto_do_usuario">User\'s Profile Picture</string>
    <string name="title_activity_maps">Map</string>
    <string name="descricao_vazia">Make a text describing your cat!</string>
    <string name="alerta_gps">To View Coordinates the APP Needs the GPS!</string>
</resources>
